Add faction icons to factions table

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,7 +22,7 @@
             <a href="{{ .Permalink }}">{{ .Title }}</a>
           </td>
           <td class="list-image">
-            <img src="https://cdn.discordapp.com/attachments/759414542240972845/1346599793320787998/image.png?ex=67c96f09&is=67c81d89&hm=132e54eadaa18eb00096bb543cf524d18e315db31625ef1167ce5352ff1c489b&">
+            <img src="/images/faction_icons/symbol48_{{ .Params.internalTitle }}.png" alt="{{ .Title }}" />
           </td>
         </tr>
         {{- end }}
