--- a/layouts/shortcodes/unit_gallery/unit_gallery.html
+++ b/layouts/shortcodes/unit_gallery/unit_gallery.html
@@ -28,6 +28,9 @@
         <option class="background-select-content" id="RK_Spearmen" value="RK_Spearmen">Dúnedain Guardsmen (Reunited)
         </option>
       </optgroup>
+      <optgroup label="Dwarves">
+        <option class="background-select-content" id="Grindfarn" value="Grindfarn">Grindfarn</option>
+      </optgroup>
     </select>
 
     <div id="background-select-label">
@@ -44,6 +47,6 @@
       <option class="background-select-content" id="Fangorn" value="Fangorn">Fangorn</option>
       <option class="background-select-content" id="Black" value="Black">Black</option>
     </select>
-    <img id="toggleRotateButton" src="https://i.imgur.com/SjOWbFm.png" alt="Snow">
+    <img id="toggleRotateButton" src="https://i.imgur.com/SjOWbFm.webp" alt="Snow">
 </div>
 </div>
