--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,7 +22,9 @@
             <a href="{{ .Permalink }}">{{ .Title }}</a>
           </td>
           <td class="list-image">
-            <img src="/images/faction_icons/symbol48_{{ .Params.internalTitle }}.webp" alt="{{ .Title }}" />
+            <a href="{{ .Permalink }}">
+              <img src="/images/faction_icons/symbol48_{{ .Params.internalTitle }}.webp" alt="{{ .Title }}" />
+            </a>
           </td>
         </tr>
         {{- end }}
