--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,7 +15,7 @@
       <li><a href="{{ "download" | relURL }}"> Download </a></li>
       <li><a href="{{ "unit_gallery" | relURL }}"> Unit Gallery </a></li>
       <li><a href="{{ "worldmap" | relURL }}"> World Map </a></li>
-      <li><a href="{{ "previews" | relURL }}"> Previews </a></li>
+      {{/* <li><a href="{{ " previews" | relURL }}"> Previews </a></li> */}}
       <li><a href="{{ "faq" | relURL }}"> FAQ </a></li>
       <li><a href="{{ "credits" | relURL }}"> Credits </a></li>
     </ul>
